--- a/scss/modules/section.scss
+++ b/scss/modules/section.scss
@@ -5,6 +5,7 @@
   background: $white;
   position: relative;
   pointer-events: all;
+  box-shadow: 10px 10px rgba($colour, 1);
 
   .section__note {
     font-family: $fontStackSerif;
