--- a/scss/modules/loading-screen.scss
+++ b/scss/modules/loading-screen.scss
@@ -1,17 +1,19 @@
 @keyframes loading-anim {
-  0% { border-color: transparent; }
-  50% { border-color: $white; }
+  0% { box-shadow: 5px 5px $white; }
+  25% { box-shadow: 5px -5px $white; }
+  50% { box-shadow: -5px -5px $white; }
+  75% { box-shadow: -5px 5px $white; }
 }
 
 .loading-screen {
   position: fixed;
+  background: transparent;
   background: darken($backgroundColour, 25%);
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: $indexLoadingScreen;
-  opacity: 0;
   pointer-events: none;
   transition: opacity 0.5s;
 
@@ -21,18 +23,20 @@
   }
 
   .loading-screen__image {
+    @include padding(2, 1);
     position: absolute;
     top: 50%;
     left: 50%;
     color: $white;
     transform: translate(-50%, -50%);
     font-size: $fontSize;
-    border-bottom: 1px solid $white;
+    border: 1px solid $white;
     text-transform: uppercase;
     animation-name: loading-anim;
-    animation-duration: 0.5s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-timing-function: steps(1);
+    background: darken($backgroundColour, 25%);
 
     img {
       width: 100px;
