--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -184,6 +184,10 @@
       pointer-events: all;
     }
 
+    &.hidden {
+      opacity: 0;
+    }
+
     .gallery__control-block {
       @include padding(0, 0);
 
